--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="light" lang="ru">
+<html theme="light" lang="ru">
 
 
 <head>
@@ -18,8 +18,18 @@
       <a class="header-branding" href="/" title="На главную" aria-label="На главную страницу" rel="home" >
         <div class="header-branding__logo" >
           <svg xmlns="http://www.w3.org/2000/svg"  width="827px" height="296px" viewBox="0 40 827 200" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd" >
-            <g><path style="opacity:1" fill="#1d70b8" d="M 691.5,46.5 C 704.5,46.5 717.5,46.5 730.5,46.5C 728.522,53.2629 725.856,59.7629 722.5,66C 734.638,60.2608 746.638,53.9274 758.5,47C 771.496,46.5001 784.496,46.3334 797.5,46.5C 784.233,79.2931 770.566,111.96 756.5,144.5C 770.15,145.499 783.817,145.833 797.5,145.5C 797.5,151.167 797.5,156.833 797.5,162.5C 781.153,162.167 764.82,162.501 748.5,163.5C 747.305,165.751 746.305,168.085 745.5,170.5C 762.821,171.5 780.154,171.833 797.5,171.5C 797.5,177.167 797.5,182.833 797.5,188.5C 777.489,188.167 757.489,188.5 737.5,189.5C 732.167,201.833 726.833,214.167 721.5,226.5C 709.185,227.499 696.851,227.832 684.5,227.5C 689.409,214.512 694.743,201.678 700.5,189C 690.483,188.168 680.483,188.334 670.5,189.5C 665.167,201.833 659.833,214.167 654.5,226.5C 641.846,227.666 629.18,227.833 616.5,227C 622.361,214.417 628.027,201.75 633.5,189C 596.833,188.333 560.167,188.333 523.5,189C 500.167,201.667 476.833,214.333 453.5,227C 423.5,227.667 393.5,227.667 363.5,227C 386.339,214.08 409.339,201.413 432.5,189C 398.5,188.667 364.5,188.333 330.5,188C 339.335,182.415 348.335,177.081 357.5,172C 393.5,171.667 429.5,171.333 465.5,171C 470.341,168.079 475.341,165.412 480.5,163C 444.167,162.667 407.833,162.333 371.5,162C 378.996,156.751 386.663,151.751 394.5,147C 433.749,145.678 473.082,145.012 512.5,145C 572.55,112.646 632.217,79.813 691.5,46.5 Z M 685.5,63.5 C 686.043,63.56 686.376,63.8933 686.5,64.5C 682.296,74.4073 677.962,84.2406 673.5,94C 642.34,110.746 611.34,127.746 580.5,145C 565.833,145.667 551.167,145.667 536.5,145C 586.549,118.313 636.216,91.1465 685.5,63.5 Z M 751.5,64.5 C 752.239,64.369 752.906,64.5357 753.5,65C 741.743,91.6773 730.41,118.511 719.5,145.5C 709.478,145.832 699.478,145.499 689.5,144.5C 698.028,124.915 706.362,105.248 714.5,85.5C 726.733,78.2196 739.067,71.2196 751.5,64.5 Z M 664.5,111.5 C 665.239,111.369 665.906,111.536 666.5,112C 661.146,122.902 656.479,134.068 652.5,145.5C 636.163,145.667 619.83,145.5 603.5,145C 624.216,134.313 644.55,123.146 664.5,111.5 Z M 503.5,162.5 C 518.17,162.333 532.837,162.5 547.5,163C 542.341,165.412 537.341,168.079 532.5,171C 518.167,171.667 503.833,171.667 489.5,171C 494.397,168.392 499.063,165.559 503.5,162.5 Z M 570.5,162.5 C 595.169,162.333 619.836,162.5 644.5,163C 643.438,165.791 642.105,168.457 640.5,171C 612.5,171.667 584.5,171.667 556.5,171C 561.397,168.392 566.063,165.559 570.5,162.5 Z M 681.5,162.5 C 691.522,162.168 701.522,162.501 711.5,163.5C 709.924,165.979 708.924,168.646 708.5,171.5C 698.478,171.832 688.478,171.499 678.5,170.5C 679.513,167.812 680.513,165.146 681.5,162.5 Z M 455.5,188.5 C 470.17,188.333 484.837,188.5 499.5,189C 482.66,198.587 465.66,207.921 448.5,217C 433.833,217.667 419.167,217.667 404.5,217C 421.885,207.979 438.885,198.479 455.5,188.5 Z"/></g>
-            <g><path style="opacity:1" fill="#1d70b8" d="M 136.5,145.5 C 187.264,148.252 237.764,153.585 288,161.5C 302.695,156.935 317.195,151.768 331.5,146C 346.178,145.167 360.845,145.334 375.5,146.5C 353.299,160.531 330.966,174.365 308.5,188C 219.5,189.337 130.5,189.503 41.5,188.5C 45.2923,182.545 49.6256,177.045 54.5,172C 72.1379,167.872 89.8045,163.872 107.5,160C 117.259,155.121 126.925,150.287 136.5,145.5 Z M 164.5,162.5 C 184.135,164.188 203.802,165.688 223.5,167C 229.211,167.742 234.878,168.742 240.5,170C 213.519,171.527 186.519,171.86 159.5,171C 161.556,168.386 163.223,165.553 164.5,162.5 Z"/></g>
+            <defs>
+              <linearGradient id="gradient1">
+                <stop stop-color="#1E24EF" offset="0" />
+                <stop stop-color="#6F00AF" offset="1" />
+              </linearGradient>
+              <linearGradient id="gradient2">
+                <stop stop-color="#1d70b8" offset="0" />
+                <stop stop-color="#1E24EF" offset="1" />
+              </linearGradient>
+            </defs>
+            <g><path style="opacity:1" fill="url(#gradient1)" d="M 691.5,46.5 C 704.5,46.5 717.5,46.5 730.5,46.5C 728.522,53.2629 725.856,59.7629 722.5,66C 734.638,60.2608 746.638,53.9274 758.5,47C 771.496,46.5001 784.496,46.3334 797.5,46.5C 784.233,79.2931 770.566,111.96 756.5,144.5C 770.15,145.499 783.817,145.833 797.5,145.5C 797.5,151.167 797.5,156.833 797.5,162.5C 781.153,162.167 764.82,162.501 748.5,163.5C 747.305,165.751 746.305,168.085 745.5,170.5C 762.821,171.5 780.154,171.833 797.5,171.5C 797.5,177.167 797.5,182.833 797.5,188.5C 777.489,188.167 757.489,188.5 737.5,189.5C 732.167,201.833 726.833,214.167 721.5,226.5C 709.185,227.499 696.851,227.832 684.5,227.5C 689.409,214.512 694.743,201.678 700.5,189C 690.483,188.168 680.483,188.334 670.5,189.5C 665.167,201.833 659.833,214.167 654.5,226.5C 641.846,227.666 629.18,227.833 616.5,227C 622.361,214.417 628.027,201.75 633.5,189C 596.833,188.333 560.167,188.333 523.5,189C 500.167,201.667 476.833,214.333 453.5,227C 423.5,227.667 393.5,227.667 363.5,227C 386.339,214.08 409.339,201.413 432.5,189C 398.5,188.667 364.5,188.333 330.5,188C 339.335,182.415 348.335,177.081 357.5,172C 393.5,171.667 429.5,171.333 465.5,171C 470.341,168.079 475.341,165.412 480.5,163C 444.167,162.667 407.833,162.333 371.5,162C 378.996,156.751 386.663,151.751 394.5,147C 433.749,145.678 473.082,145.012 512.5,145C 572.55,112.646 632.217,79.813 691.5,46.5 Z M 685.5,63.5 C 686.043,63.56 686.376,63.8933 686.5,64.5C 682.296,74.4073 677.962,84.2406 673.5,94C 642.34,110.746 611.34,127.746 580.5,145C 565.833,145.667 551.167,145.667 536.5,145C 586.549,118.313 636.216,91.1465 685.5,63.5 Z M 751.5,64.5 C 752.239,64.369 752.906,64.5357 753.5,65C 741.743,91.6773 730.41,118.511 719.5,145.5C 709.478,145.832 699.478,145.499 689.5,144.5C 698.028,124.915 706.362,105.248 714.5,85.5C 726.733,78.2196 739.067,71.2196 751.5,64.5 Z M 664.5,111.5 C 665.239,111.369 665.906,111.536 666.5,112C 661.146,122.902 656.479,134.068 652.5,145.5C 636.163,145.667 619.83,145.5 603.5,145C 624.216,134.313 644.55,123.146 664.5,111.5 Z M 503.5,162.5 C 518.17,162.333 532.837,162.5 547.5,163C 542.341,165.412 537.341,168.079 532.5,171C 518.167,171.667 503.833,171.667 489.5,171C 494.397,168.392 499.063,165.559 503.5,162.5 Z M 570.5,162.5 C 595.169,162.333 619.836,162.5 644.5,163C 643.438,165.791 642.105,168.457 640.5,171C 612.5,171.667 584.5,171.667 556.5,171C 561.397,168.392 566.063,165.559 570.5,162.5 Z M 681.5,162.5 C 691.522,162.168 701.522,162.501 711.5,163.5C 709.924,165.979 708.924,168.646 708.5,171.5C 698.478,171.832 688.478,171.499 678.5,170.5C 679.513,167.812 680.513,165.146 681.5,162.5 Z M 455.5,188.5 C 470.17,188.333 484.837,188.5 499.5,189C 482.66,198.587 465.66,207.921 448.5,217C 433.833,217.667 419.167,217.667 404.5,217C 421.885,207.979 438.885,198.479 455.5,188.5 Z"/></g>
+            <g><path style="opacity:1" fill="url(#gradient2)" d="M 136.5,145.5 C 187.264,148.252 237.764,153.585 288,161.5C 302.695,156.935 317.195,151.768 331.5,146C 346.178,145.167 360.845,145.334 375.5,146.5C 353.299,160.531 330.966,174.365 308.5,188C 219.5,189.337 130.5,189.503 41.5,188.5C 45.2923,182.545 49.6256,177.045 54.5,172C 72.1379,167.872 89.8045,163.872 107.5,160C 117.259,155.121 126.925,150.287 136.5,145.5 Z M 164.5,162.5 C 184.135,164.188 203.802,165.688 223.5,167C 229.211,167.742 234.878,168.742 240.5,170C 213.519,171.527 186.519,171.86 159.5,171C 161.556,168.386 163.223,165.553 164.5,162.5 Z"/></g>
           </svg>
         </div>
         <div class="header-branding__title" >Учебно-производственный центр</div>
@@ -28,7 +38,7 @@
       <nav class="header__nav">
         <ul class="main-menu">
           <li class="menu-item menu-item-type-custom menu-item-object-custom">Главная</li>
-          <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children">Сведения об организации</li>
+          <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children">Об организации</li>
           <li class="menu-item menu-item-type-custom menu-item-object-custom">Новости</li>
           <li class="menu-item menu-item-type-custom menu-item-object-custom">Контакты</li>
         </ul>
@@ -39,7 +49,7 @@
         <button id="header-search-button" ></button>
       </div>
       <div class="header__theme-switch">
-        <label for="theme-switcher" title="Версия для слепых">
+        <label for="theme-switcher" title="Отображение сайта">
           <input type="checkbox" id="theme-switcher">
           <span class="slider round"></span>
         </label>
@@ -59,14 +69,35 @@
     <div class="wrapper">
       <main class="main">
         <h1>Учебно-производственный центр АО «Авиаавтоматика» им. В.В. Тарасова»</h1>
-        <p>
-          Курсы повышения квалификации
-        </p>
+
+        <p>Наш учебно-производственный центр производит набор на курсы повышение квалификации рабочих.</p>
+
+        <h2>
+          Учебные программы
+        </h2>
+
+        <p>Список учебных программ с шифром и названием профессии:</p>
 
 
-        <p>Уважаемые коллеги!</p>
 
-        <p>Учебно-производственный центр АО «Авиаавтоматика» им. В.В. Тарасова» объявляет набор на курсы повышение квалификации рабочих:</p>
+        <div class="specs-list" >
+
+          <div class="specs-list__item"><a href="./1" title="" ><span class="upc-cod">11629</span> - <span class="upc-name">Гальваник</span></a></div>
+          <div class="specs-list__item"><a href="./1" title="" ><span class="upc-cod">11629</span> - <span class="upc-name">Гальваник</span></a></div>
+          <div class="specs-list__item"><a href="./1" title="" ><span class="upc-cod">11629</span> - <span class="upc-name">Гальваник</span></a></div>
+          <div class="specs-list__item"><a href="./1" title="" ><span class="upc-cod">11629</span> - <span class="upc-name">Гальваник</span></a></div>
+          <div class="specs-list__item"><a href="./1" title="" ><span class="upc-cod">11629</span> - <span class="upc-name">Гальваник</span></a></div>
+          <div class="specs-list__item"><a href="./1" title="" ><span class="upc-cod">11629</span> - <span class="upc-name">Гальваник</span></a></div>
+          <div class="specs-list__item"><a href="./1" title="" ><span class="upc-cod">11629</span> - <span class="upc-name">Гальваник</span></a></div>
+          <div class="specs-list__item"><a href="./1" title="" ><span class="upc-cod">11629</span> - <span class="upc-name">Гальваник</span></a></div>
+          <div class="specs-list__item"><a href="./1" title="" ><span class="upc-cod">11629</span> - <span class="upc-name">Гальваник</span></a></div>
+          <div class="specs-list__item"><a href="./1" title="" ><span class="upc-cod">11629</span> - <span class="upc-name">Гальваник</span></a></div>
+          <div class="specs-list__item"><a href="./1" title="" ><span class="upc-cod">11629</span> - <span class="upc-name">Гальваник</span></a></div>
+          <div class="specs-list__item"><a href="./1" title="" ><span class="upc-cod">11629</span> - <span class="upc-name">Гальваник</span></a></div>
+
+        </div>
+
+
 
         <table class="tvpad">
           <tbody>
@@ -196,6 +227,10 @@
       </main>
       <aside class="aside">
         <h2>Сведения об образовательной организации</h2>
+
+        <p><img src="https://upc.elektrodetal.com/images/img/about.jpg" /> </p>
+        <p><a href=""><img src="https://upc.elektrodetal.com/images/img/about.jpg" /><strong>3sdfsd</strong><em>1</em></a></p>
+
         <p>
           Основные сведения<br>
           Структура и органы управления образовательной организацией<br>
@@ -251,11 +286,27 @@
     </div>
   </div>
 </div>
+
 <template id="visibility">
-  <div class="order-success">
-    <h2 class="order-success__title">Заказ оформлен</h2>
-    <p class="order-success__description">Списано 0 синапсов</p>
-    <button class="button order-success__close">За новыми покупками!</button>
+  <div class="visibility">
+    <div class="wrapper">
+      <div class="visibility__title">Параметры шрифта, цветов сайта и отображения фото</div>
+      <button class="visibility__button reset-settings">По-уполчанию</button>
+      Размер: <button class="visibility__button font_smaller">- Меньше</button>
+      <button class="visibility__button font_bigger">+ Больше</button>
+      Шрифт:
+      <button class="visibility__button selected font-sans-serif">Без засечек</button>
+      <button class="visibility__button font-serif">С засечками</button>
+      Интервал: <button class="visibility__button font-interval-smaller">Меньше</button>
+      <button class="visibility__button font-interval-bigger">Больше</button>
+      Цвета: <button class="visibility__button color black-on-white chose">Б</button>
+      <button class="visibility__button color white-on-black">Ч</button>
+      <button class="visibility__button color navy-on-blue">Г</button>
+      <button class="visibility__button color green-on-brown">К</button>
+      Показывать&nbsp;фото:&nbsp;<label for="img-switcher" title="Показывать фото" class="img-switcher">
+      <input type="checkbox" id="img-switcher" checked ><span></span></label>
+
+    </div>
   </div>
 </template>
 
