tuning order bar

--- a/src/index.html
+++ b/src/index.html
@@ -225,7 +225,7 @@
       <input type="text" id="orderEmail" placeholder="mail@mail.me" class="upc-input input-left" />
       <label for="orderDescription">Дополнительно</label>
       <textarea id="orderDescription" class="upc-input input-left" ></textarea>
-      <button class="upc-button">Отправить</button>
+      <button class="upc-button" id="orderSend" >Отправить</button>
     </div>
   </div>
 </div>
