--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html theme="light" lang="ru">
+<html lang="ru">
 
 
 <head>
@@ -10,8 +10,15 @@
 </head>
 
 
-<body class="body">
-
+<body class="body" >
+<div id="preloader" class="preloader show">
+  <div class="preloader__wrapper">
+    <div class="preloader__img"><div></div></div>
+    <div class="preloader__title">Учебно-производственный центр</div>
+    <div class="preloader__spinner">
+    </div>
+  </div>
+</div>
 <header class="header">
   <div class="wrapper">
     <a class="header-branding" href="http://upc/" title="На главную" aria-label="На главную страницу" rel="home">
@@ -159,33 +166,33 @@
   </div> <!--/wrapper-->
 </div>
 
-  <footer class="footer">
-    <div class="wrapper">
+<footer class="footer">
+  <div class="wrapper">
 
-      <div class="footer-main">
-        <p>
-          Учебно-производственный центр<br>
-          АО «Авиаавтоматика» им. В.В. Тарасова»<br>
-          Россия, 305040, Курская обл., г. Курск, ул. Запольная, 47<br>
-          Телефон: +7 471 253 58 90
-        </p>
 
-        <p>
+    <div class="footer-main"><p>
+      Учебно-производственный центр<br>
+      АО «Авиаавтоматика» им. В.В. Тарасова»<br>
+      Россия, 305040, Курская обл., г. Курск, ул. Запольная, 47<br>
+      Телефон: +7 471 253 58 90
+    </p>
 
-          Политика безопасности персональных данных<br>
-          Об использовании файлов cookie<br>
-          Карта сайта<br>
-        </p>
+      <p>
 
-        <p>© АО «Авиаавтоматика» им. В.В. Тарасова». Работаем с 1959 года.</p>
+        <a href="http://upc/privacy-policy/" target="_blank">Политика конфиденциальности</a><br>
 
-      </div>
-      <div class="footer-aside">
-        Социальные сети:
-        <a href="https://vk.com/aviaavtomatika1959">Вконтакте</a>
-      </div>
-    </div>
-  </footer>
+        <a href="http://upc/sitemap.xml">Карта сайта</a><br>
+      </p>
+
+      <p>© АО «Авиаавтоматика» им. В.В. Тарасова». Работаем с 1959 года.</p></div>
+
+    <div class="footer-aside"><a href="https://vk.com/aviaavtomatika1959" target="_blank" class="footer__vk"><svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M0 5C0 2.23858 2.23858 0 5 0H55C57.7614 0 60 2.23858 60 5V55C60 57.7614 57.7614 60 55 60H5C2.23858 60 0 57.7614 0 55V5Z" fill="#D9D9D9"></path>
+      <path d="M31.7775 46C14.3528 46 4.41412 33.988 4 14H12.7283C13.015 28.6706 19.4495 34.8848 24.5463 36.1662V14H32.7652V26.6526C37.7983 26.108 43.0856 20.3424 44.8696 14H53.0883C51.7187 21.8158 45.9846 27.5816 41.9073 29.952C45.9846 31.8738 52.5153 36.9028 55 46H45.9528C44.0097 39.914 39.1682 35.2052 32.7652 34.5646V46H31.7775Z" fill="white"></path>
+    </svg></a></div>
+
+  </div>
+</footer>
 
 <svg width="987" height="372" viewBox="0 0 1150 372" fill="none" xmlns="http://www.w3.org/2000/svg" class="bubble1" style="transform: translate3d(0px, 0px, 0px);">
   <g opacity="0.3" filter="url(#filter1)" >
